--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,21 @@
   "description": "This is the Basis Independent Online Forum!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "server": "node-env-run server --exec nodemon | pino-colada"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "mysql": "^2.17.1"
+  },
+  "devDependencies": {
     "express": "^4.17.1",
     "express-pino-logger": "^4.0.0",
-    "mysql": "^2.17.1",
     "node-env-run": "^3.0.2",
     "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.5",
