--- a/forum/package.json
+++ b/forum/package.json
@@ -14,7 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "run-p server start",
-    "server": "node-env-run server --exec nodemon | pino-colada"
+    "server": "node-env-run backend --exec nodemon | pino-colada"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,7 +30,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    "proxy": "http://127.0.0.1:3306",
+    "proxy": "http://127.0.0.1:3001",
   }
 
 }
